Creation d'entreprise via l'interface graphique

--- a/WebContent/resources/template/layout.xhtml
+++ b/WebContent/resources/template/layout.xhtml
@@ -37,7 +37,7 @@
 								<c:when test="${ sessionScope.user.ability == 'Patron'}">
 									<ul class="nav navbar-nav">
 										<li class="active"><a href="index.jsp">Accueil</a></li>
-										<li><a href="#">Ajouter des entreprises</a></li>
+										<li><a href="companies.jsp">Ajouter des entreprises</a></li>
 										<li><a href="#">Creer des utilisateurs</a></li>
 										<li><a href="#">Creer des volumes</a></li>
 										<li><a href="#">Creer des workPackages</a></li>
