--- a/WebContent/resources/template/layout.xhtml
+++ b/WebContent/resources/template/layout.xhtml
@@ -38,7 +38,7 @@
 									<ul class="nav navbar-nav">
 										<li class="active"><a href="index.jsp">Accueil</a></li>
 										<li><a href="companies.jsp">Ajouter des entreprises</a></li>
-										<li><a href="#">Creer des utilisateurs</a></li>
+										<li><a href="registerForm.jsp">Creer des utilisateurs</a></li>
 										<li><a href="#">Creer des volumes</a></li>
 										<li><a href="#">Creer des workPackages</a></li>
 									</ul>
@@ -47,7 +47,7 @@
 									<ul class="nav navbar-nav">
 										<li class="active"><a href="index.jsp">Accueil</a></li>
 										<li><a href="#">Ajouter des entreprises</a></li>
-										<li><a href="#">Creer des utilisateurs</a></li>
+										<li><a href="registerForm.jsp">Creer des utilisateurs</a></li>
 										<li><a href="#">Creer des volumes</a></li>
 										<li><a href="#">Creer des workPackages</a></li>
 									</ul>
@@ -55,8 +55,7 @@
 								<c:when test="${ sessionScope.user.ability == 'User'}">
 									<ul class="nav navbar-nav">
 										<li class="active"><a href="index.jsp">Accueil</a></li>
-										<li><a href="#">Ajouter des entreprises</a></li>
-										<li><a href="#">Creer des utilisateurs</a></li>
+										<li><a href="#">Ajouter des entreprises</a></li>									
 										<li><a href="#">Creer des volumes</a></li>
 										<li><a href="#">Creer des workPackages</a></li>
 									</ul>
