--- a/WebContent/resources/template/layout.xhtml
+++ b/WebContent/resources/template/layout.xhtml
@@ -7,11 +7,12 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-<title>Inscription</title>
+<title>ICBM</title>
 <link href="resources/css/yeti.min.css" rel="stylesheet" />
 <script src="resources/js/jquery-1.11.2.min.js"></script>
 <script src="resources/js/bootstrap.min.js"></script>
 <script src="resources/js/control.js"></script>
+<script src="resources/js/chart.js"></script>
 </head>
 <body>
 	<f:view>
@@ -26,36 +27,39 @@
 							class="icon-bar"></span> <span class="icon-bar"></span> <span
 							class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">ICBM</a>
+					<a class="navbar-brand" href="home.jsp">ICBM</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 
 					<c:choose>
 						<c:when test="${ sessionScope.user != null}">
-						
+
 							<c:choose>
 								<c:when test="${ sessionScope.user.ability == 'Patron'}">
 									<ul class="nav navbar-nav">
 										<li class="active"><a href="home.jsp">Accueil</a></li>
 										<li><a href="companies.jsp">Ajouter des entreprises</a></li>
-										<li><a href="registerForm.jsp">Creer des utilisateurs</a></li>
-										<li><a href="#">Creer des volumes</a></li>
-										<li><a href="#">Creer des workPackages</a></li>
+										<li><a href="#">Créer des utilisateurs</a></li>
+										<li><a href="#">Créer des volumes</a></li>
+										<li><a href="#">Créer des workPackages</a></li>
 									</ul>
 								</c:when>
 								<c:when test="${ sessionScope.user.ability == 'CompanyChief'}">
 									<ul class="nav navbar-nav">
 										<li class="active"><a href="home.jsp">Accueil</a></li>
 										<li><a href="#">Ajouter des entreprises</a></li>
-										<li><a href="registerForm.jsp">Creer des utilisateurs</a></li>
-										<li><a href="#">Creer des volumes</a></li>
-										<li><a href="#">Creer des workPackages</a></li>
+										<li><a href="#">Créer des utilisateurs</a></li>
+										<li><a href="#">Créer des volumes</a></li>
+										<li><a href="#">Créer des workPackages</a></li>
 									</ul>
 								</c:when>
 								<c:when test="${ sessionScope.user.ability == 'User'}">
 									<ul class="nav navbar-nav">
 										<li class="active"><a href="home.jsp">Accueil</a></li>
-										<li><a href="chapters.jsp">Espace de travail</a></li>
+										<li><a href="#">Ajouter des entreprises</a></li>
+										<li><a href="#">Créer des utilisateurs</a></li>
+										<li><a href="#">Créer des volumes</a></li>
+										<li><a href="#">Créer des workPackages</a></li>
 									</ul>
 								</c:when>
 							</c:choose>
@@ -70,7 +74,7 @@
 									<ul class="dropdown-menu" role="menu"
 										aria-labelledby="dropdownLogin">
 										<li role="presentation"><a role="menuitem" tabindex="-1"
-											href="#" id="deconnectSubmit">Déconnection</a></li>
+											href="#" id="deconnectSubmit">Déconnexion</a></li>
 									</ul>
 								</div>
 
@@ -79,9 +83,9 @@
 						</c:when>
 						<c:otherwise>
 							<script>
-							window.location.replace("index.jsp");
+								window.location.replace("index.jsp");
 							</script>
-							
+
 						</c:otherwise>
 					</c:choose>
 
@@ -99,7 +103,12 @@
 
 
 		<div class="navbar-inverse navbar-fixed-bottom">
-			<div class="container">Hello</div>
+			<div class="container text-center">
+				<div class="row">
+						<h5>ICBM - International Collaboration Book Maker - Tous
+							droits réservés ©</h5>
+				</div>
+			</div>
 		</div>
 	</f:view>
 </body>
