--- a/WebContent/resources/template/layout.xhtml
+++ b/WebContent/resources/template/layout.xhtml
@@ -36,7 +36,7 @@
 							<c:choose>
 								<c:when test="${ sessionScope.user.ability == 'Patron'}">
 									<ul class="nav navbar-nav">
-										<li class="active"><a href="index.jsp">Accueil</a></li>
+										<li class="active"><a href="home.jsp">Accueil</a></li>
 										<li><a href="companies.jsp">Ajouter des entreprises</a></li>
 										<li><a href="#">Creer des utilisateurs</a></li>
 										<li><a href="#">Creer des volumes</a></li>
@@ -45,7 +45,7 @@
 								</c:when>
 								<c:when test="${ sessionScope.user.ability == 'CompanyChief'}">
 									<ul class="nav navbar-nav">
-										<li class="active"><a href="index.jsp">Accueil</a></li>
+										<li class="active"><a href="home.jsp">Accueil</a></li>
 										<li><a href="#">Ajouter des entreprises</a></li>
 										<li><a href="#">Creer des utilisateurs</a></li>
 										<li><a href="#">Creer des volumes</a></li>
@@ -54,7 +54,7 @@
 								</c:when>
 								<c:when test="${ sessionScope.user.ability == 'User'}">
 									<ul class="nav navbar-nav">
-										<li class="active"><a href="index.jsp">Accueil</a></li>
+										<li class="active"><a href="home.jsp">Accueil</a></li>
 										<li><a href="#">Ajouter des entreprises</a></li>
 										<li><a href="#">Creer des utilisateurs</a></li>
 										<li><a href="#">Creer des volumes</a></li>
