--- a/WebContent/resources/template/layout.xhtml
+++ b/WebContent/resources/template/layout.xhtml
@@ -56,10 +56,7 @@
 								<c:when test="${ sessionScope.user.ability == 'User'}">
 									<ul class="nav navbar-nav">
 										<li class="active"><a href="home.jsp">Accueil</a></li>
-										<li><a href="#">Ajouter des entreprises</a></li>
-										<li><a href="#">Créer des utilisateurs</a></li>
-										<li><a href="#">Créer des volumes</a></li>
-										<li><a href="#">Créer des workPackages</a></li>
+										<li><a href="chapters.jsp">Espace de travail</a></li>
 									</ul>
 								</c:when>
 							</c:choose>
