--- a/WebContent/resources/template/layout.xhtml
+++ b/WebContent/resources/template/layout.xhtml
@@ -102,7 +102,7 @@
 		<div class="navbar-inverse navbar-fixed-bottom">
 			<div class="container text-center">
 				<div class="row">
-						<h5>ICBM - International Collaboration Book Maker - Tous
+						<h5 style="color: white;">ICBM - International Collaboration Book Maker - Tous
 							droits réservés ©</h5>
 				</div>
 			</div>
