Remise des chapitres OK

--- a/WebContent/resources/template/layout.xhtml
+++ b/WebContent/resources/template/layout.xhtml
@@ -46,11 +46,10 @@
 								</c:when>
 								<c:when test="${ sessionScope.user.ability == 'CompanyChief'}">
 									<ul class="nav navbar-nav">
-										<li class="active"><a href="home.jsp">Accueil</a></li>
-										<li><a href="#">Ajouter des entreprises</a></li>
+										<li><a href="home.jsp">Accueil</a></li>
 										<li><a href="#">Créer des utilisateurs</a></li>
-										<li><a href="#">Créer des volumes</a></li>
-										<li><a href="#">Créer des workPackages</a></li>
+										<li><a href="workPackages.jsp">Créer des workPackages</a></li>
+										<li><a href="chapters.jsp">Créer des chapitres</a></li>
 									</ul>
 								</c:when>
 								<c:when test="${ sessionScope.user.ability == 'User'}">
