--- a/WebContent/resources/template/layout.xhtml
+++ b/WebContent/resources/template/layout.xhtml
@@ -37,7 +37,7 @@
 							<c:choose>
 								<c:when test="${ sessionScope.user.ability == 'Patron'}">
 									<ul class="nav navbar-nav">
-										<li class="active"><a href="home.jsp">Accueil</a></li>
+										<li><a href="home.jsp">Accueil</a></li>
 										<li><a href="companies.jsp">Gestion des entreprises</a></li>
 										<li><a href="registerForm.jsp">Gestion des
 												utilisateurs</a></li>
@@ -58,7 +58,7 @@
 								</c:when>
 								<c:when test="${ sessionScope.user.ability == 'User'}">
 									<ul class="nav navbar-nav">
-										<li class="active"><a href="home.jsp">Accueil</a></li>
+										<li><a href="home.jsp">Accueil</a></li>
 										<li><a href="chapters.jsp">Espace de travail</a></li>
 									</ul>
 								</c:when>
