--- a/WebContent/resources/template/layout.xhtml
+++ b/WebContent/resources/template/layout.xhtml
@@ -53,7 +53,7 @@
 												utilisateurs</a></li>
 										<li><a href="workPackages.jsp">Gestion des
 												workPackages</a></li>
-										<li><a href="chapters.jsp">Gestion des chapitres</a></li>
+										<li><a href="chapters.jsp">Gestion des chapitres<span class="badge" style="background-color:black;"><h:outputText value="${chapterDAO.promotedChapterFromEntreprise(sessionScope.user.entreprise.id).size()}" /></span></a></li>
 									</ul>
 								</c:when>
 								<c:when test="${ sessionScope.user.ability == 'User'}">
@@ -96,7 +96,7 @@
 		</nav>
 
 
-		<div id="mainContent">
+		<div id="mainContent" style="margin-bottom:10%">
 			<ui:insert name="mainContent">
 			</ui:insert>
 		</div>
