Mise a jour des chapitres

--- a/WebContent/resources/template/layout.xhtml
+++ b/WebContent/resources/template/layout.xhtml
@@ -13,6 +13,7 @@
 <script src="resources/js/bootstrap.min.js"></script>
 <script src="resources/js/control.js"></script>
 <script src="resources/js/chart.js"></script>
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 </head>
 <body>
 	<f:view>
